[project]
name = "smarthub"
version = "0.1.0"
license = {text = "Apache-2.0"}
description = "A Python library for gathering historical usage/cost from utilities that use SmartHub."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.5",
    "pyotp>=2.9.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "aioresponses",
]

[project.scripts]
smarthub = "smarthub.__main__:main_sync"

[project.urls]
"Homepage" = "https://github.com/bitwhittler/smarthub"
"Bug Tracker" = "https://github.com/bitwhittler/smarthub/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 127
exclude = [
    ".git", ".mypy_cache", ".ruff_cache", ".venv", "__pypackages__",
    "build", "dist", "venv", "*_pb2.py", "*_pb2_grpc.py", "*.pyi"
]

[tool.ruff.lint]
select = [
    "A",  # flake8-builtins
    "ASYNC",  # flake8-async
    "B",  # flake8-bugbear
    "C",  # flake8-mccabe
    "C4",  # flake8-comprehensions
    "D",  # pydocstyle
    "E",  # pycodestyle (error)
    "F",  # pyflakes
    "G",  # flake8-logging-format
    "I",  # isort
    "PGH",  # pygrep-hooks
    "PL",  # Pylint
    "RET",  # flake8-return
    "RUF",  # Ruff-specific rules
    "S",  # flake8-bandit (security)
    "SIM",  # flake8-simplify
    "T20",  # flake8-print
    "TCH",  # flake8-type-checking
    "TRY",  # tryceratops
    "UP",  # pyupgrade
    "W",  # pycodestyle (warning)
]
ignore = [
    "D203",  # 1 blank line required before class docstring
    "D213",  # Multi-line docstring summary should start at the second line
    "PLR0913",  # Too many arguments in function definition
    "PLR1714",  # Consider merging multiple comparisons
    "PLR2004",  # Magic value used in comparison
    "TRY003",  # Avoid specifying long messages outside the exception class
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "S101",  # Use of assert
    "S105",  # Hardcoded password (false positives in tests)
    "S106",  # Hardcoded password arg (false positives in tests)
    "D100",  # Missing docstring in public module
    "D103",  # Missing docstring in public function
    "PLC0415",  # Import should be at top-level of a file
    "I001",  # Import block formatting/isort checks
]

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.mypy]
python_version = "3.11"
exclude = [".venv", "venv", "build"]
pretty = true
strict = true
show_error_codes = true
warn_incomplete_stub = true
enable_error_code = ["ignore-without-code", "redundant-self", "truthy-iterable"]

[[tool.mypy.overrides]]
module = "aioresponses.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.coverage.run]
source = ["smarthub"]

[tool.codespell]
skip = "*.json,*.csv,*.lock,./.git/*,./.venv/*"
check-filenames = true
check-hidden = true
